# airflow-cli

./: .env.template  README.md  airflow-cli.py  pyproject.toml
airflow_cli/conf/: environment.py
airflow_cli/groups/: connections.py  dag_runs.py  dags.py
airflow_cli/utils/: context.py  request.py
scripts/: clear_dags.py  clear_dags.sh
