[tool.poetry]
name = "airflow-cli"
version = "0.1.0"
description = ""
authors = ["Matthew Aguerreberry <matthew.aguerreberry@etermax.com>"]
readme = "README.md"
packages = [{include = "airflow_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
pandas = "^1.5.3"
loguru = "^0.6.0"
croniter = "^1.3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ipdb = "^0.13.11"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
